samples/_failures_safe/1761513766_1fbc7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_742a346a.c: In function ‘main’:
./samples/SAFE/__tmp_742a346a.c:157:5: error: expected declaration or statement at end of input
  157 |     }
      |     ^
